// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders 1`] = `
.c0 {
  color: blue;
  color: blue;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-filter: brightness(125%);
  filter: brightness(125%);
}

<a
  class="c0"
  href="https://ooni.org"
>
  OONI
</a>
`;

exports[`Link renders with prop color 1`] = `
.c0 {
  color: #2f9e44;
  color: green8;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-filter: brightness(125%);
  filter: brightness(125%);
}

<a
  class="c0"
>
  OONI Green
</a>
`;
